# clearpath

./: .gitignore  Anchor.toml  Cargo.toml  README.md  arch.md  dev-run-report.md  package-lock.json  package.json  slide-format.md  tsconfig.json
backend/: .env.example  package-lock.json  package.json  tsconfig.json  vercel.json
backend/scripts/: copy-idl-to-dist.js
backend/src/: config.ts  index.ts
backend/src/middleware/: auth.ts
backend/src/routes/: compliance.ts  fx.ts  kyc.ts  transfers.ts  treasury.ts
backend/src/services/: demo-store.ts  fireblocks.ts  fx-adapter.ts  kyc.ts  live-transfer.ts  solana.ts  travel-rule.ts
backend/src/types/: bnjs.d.ts
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ComplianceTable.tsx  FxRateDisplay.tsx  KycForm.tsx  TransactionHistory.tsx  TransferForm.tsx  TravelRuleLog.tsx  VaultCard.tsx  WalletProvider.tsx
frontend/src/hooks/: useFxRate.ts  useProgram.ts
programs/clearpath-hook/: Cargo.toml
programs/clearpath-hook/src/: constants.rs  errors.rs  lib.rs
programs/clearpath-hook/src/instructions/: fx_config.rs  mod.rs  transfer_hook.rs  travel_rule.rs  whitelist.rs
programs/clearpath-hook/src/state/: fx_config.rs  mod.rs  travel_rule.rs  whitelist.rs
programs/clearpath-treasury/: Cargo.toml
programs/clearpath-treasury/src/: errors.rs  lib.rs
programs/clearpath-treasury/src/instructions/: deposit.rs  fx_settle.rs  init_vault.rs  mod.rs  withdraw.rs
programs/clearpath-treasury/src/state/: vault.rs
scripts/: demo-transfer.ts  deploy-devnet-v3.js  deploy-devnet.js  init-mint.ts
tests/: clearpath-hook.ts  clearpath-treasury.ts
(+6 files in other folders)
