[workspace]
members = [
    "programs/clearpath-hook",
    "programs/clearpath-treasury",
]
resolver = "2"

[workspace.dependencies]
blake3 = "=1.6.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
