[package]
name = "clearpath-hook"
version = "0.1.0"
description = "ClearPath Compliance Hook — Token-2022 Transfer Hook for KYC/AML/Travel Rule"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clearpath_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = { version = "0.32.0" }
spl-transfer-hook-interface = "0.10"
spl-tlv-account-resolution = "0.10"
spl-discriminator = "0.4"
blake3 = { workspace = true }
